this is another commit

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -417,8 +417,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
-        duration: 2000, // Slower fade-in
-        once: true, // Animates only once
+        duration: 2000, 
+        once: true, 
       });
     </script>
   </body>
