--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../images/generated-image.png" />
     <title>DbakesCakes.com</title>
-    <link rel="stylesheet" href="../CSS/index.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
     <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto&display=swap"
