--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
   
 
-    <script src="../JAVASCRIPT/index.js"></script>
+    <script src="JAVASCRIPT/index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
