all the correct errors

--- a/bakebread.html
+++ b/bakebread.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../CSS/bakebread.css" />
+    <link rel="stylesheet" href="CSS/bakebread.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
@@ -341,7 +341,7 @@
         </div>
     </footer>
 
-    <script src="../JAVASCRIPT/bakebread.js">
+    <script src="JAVASCRIPT/bakebread.js">
        
     </script>
   </body>
