--- a/cookies.html
+++ b/cookies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science of Pastry Art of Cookies</title>
     <link rel="icon" type="image/png" href="../images/favicon.png">
-    <link rel="stylesheet" href="../CSS/cookies.css">
+    <link rel="stylesheet" href="CSS/cookies.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -240,7 +240,7 @@
         </div>
     </footer>
 
-    <script src="../JAVASCRIPT/cookies.js">
+    <script src="JAVASCRIPT/cookies.js">
         
     </script>
 </body>
