--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DbakesCakes Gallery</title>
     <link rel="icon" href="../images/generated-image.png" />
-    <link rel="stylesheet" href="../CSS/gallery.css" />
+    <link rel="stylesheet" href="CSS/gallery.css" />
     <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
 </head>
 
@@ -254,7 +254,7 @@
   </a>
 
 
-    <script src="../JAVASCRIPT/gallery.js"></script>
+    <script src="JAVASCRIPT/gallery.js"></script>
 </body>
 
 </html>
