--- a/mission.html
+++ b/mission.html
@@ -6,7 +6,7 @@
     <title>Our Mission | DbakesCakes</title>
     <link rel="icon" href="../images/generated-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="../CSS/mission.css">
+    <link rel="stylesheet" href="CSS/mission.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
@@ -271,7 +271,7 @@
 
 
 
-<script src="../JAVASCRIPT/mission.js"></script>
+<script src="JAVASCRIPT/mission.js"></script>
    
 </body>
 </html>
