--- a/our-team.html
+++ b/our-team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Team | DbakesCakes</title>
-    <link rel="stylesheet" href="../CSS/our-team.css" />
+    <link rel="stylesheet" href="CSS/our-team.css" />
     <link rel="icon" href="../images/generated-image.png" />
     <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
     <link
@@ -243,6 +243,6 @@
   </a>
 
    
-    <script src="../JAVASCRIPT/our-team.js"></script>
+    <script src="JAVASCRIPT/our-team.js"></script>
   </body>
 </html>
