--- a/welcome-apply.html
+++ b/welcome-apply.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Your Culinary Journey Begins</title>
   <link rel="icon" href="../images/generated-image.png" />
-  <link rel="stylesheet" href="../CSS/Welcome-apply.css">
+  <link rel="stylesheet" href="CSS/welcome-apply.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -150,7 +150,7 @@
       alt="WhatsApp"
     />
   </a>
-<script src="../JAVASCRIPT/welcome-apply.js"></script>
+<script src="JAVASCRIPT/welcome-apply.js"></script>
 
 </body>
 </html>
