--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meet Our Founder | DbakesCakes</title>
-    <link rel="stylesheet" href="../CSS/about.css" />
+    <link rel="stylesheet" href="CSS/about.css" />
     <link rel="icon" href="../images/generated-image.png" />
     <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
     <link
@@ -198,6 +198,6 @@
   </a>
 
 
-    <script src="../JAVASCRIPT/about.js"></script>
+    <script src="JAVASCRIPT/about.js"></script>
   </body>
 </html>
