--- a/bakecakes.html
+++ b/bakecakes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cake Baking and Decoration Course | DbakesCakes Academy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="../CSS/bakecakes.css" />
+    <link rel="stylesheet" href="CSS/bakecakes.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
@@ -247,7 +247,7 @@
         </div>
     </footer>
 
-    <script src="../JAVASCRIPT/bakecakes.js">
+    <script src="JAVASCRIPT/bakecakes.js">
         
     </script>
   </body>
