--- a/childbake.html
+++ b/childbake.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../CSS/childbake.css" />
+    <link rel="stylesheet" href="CSS/childbake.css" />
   </head>
   <body>
     <!-- Overlay for mobile menu -->
@@ -210,7 +210,7 @@
         </div>
     </footer>
 
-    <script src="../JAVASCRIPT/childbake.js">
+    <script src="JAVASCRIPT/childbake.js">
        
     </script>
   </body>
