--- a/portal.html
+++ b/portal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DbakesCake Academy Application Portal</title>
     <link rel="icon" href="../images/generated-image.png" />
-    <link rel="stylesheet" href="../CSS/portal.css" />
+    <link rel="stylesheet" href="CSS/portal.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -127,6 +127,6 @@
 
      
 
-    <script src="../JAVASCRIPT/portal.js"></script>
+    <script src="JAVASCRIPT/Portal.js"></script>
   </body>
 </html>
