--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     Preloader
-    <!-- <div id="preloader">
+    <div id="preloader">
       <div class="cooking-loader">
         <div class="fire-glow"></div>
         <div class="pot">
@@ -27,7 +27,7 @@
           ><span class="dot">.</span>
         </div>
       </div>
-    </div> -->
+    </div>
 
 
 
