--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    Preloader
+    <!-- Preloader -->
     <div id="preloader">
       <div class="cooking-loader">
         <div class="fire-glow"></div>
