--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
       </div>
 
       <div class="cake-img">
-        <a href="../images/smallchops2.jpg" data-caption="Delicious Small Chops"
-          ><img src="../images/smallchops2.jpg" alt=""
+        <a href="images/smallchops2.jpg" data-caption="Delicious Small Chops"
+          ><img src="images/smallchops2.jpg" alt=""
         /></a>
-        <a href="../images/cake3.jpg" data-caption="Classic Chocolate Cake"
-          ><img src="../images/cake3.jpg" alt=""
+        <a href="images/cake3.jpg" data-caption="Classic Chocolate Cake"
+          ><img src="images/cake3.jpg" alt=""
         /></a>
-        <a href="../images/cake4.jpg" data-caption="Royal Wedding Cake"
+        <a href="images/cake4.jpg" data-caption="Royal Wedding Cake"
           ><img src="../images/cake4.jpg" alt=""
         /></a>
         <a
-          href="../images/smallchops3.jpg"
+          href="images/smallchops3.jpg"
           data-caption="Premium Small Chops Tray"
-          ><img src="../images/smallchops3.jpg" alt=""
+          ><img src="images/smallchops3.jpg" alt=""
         /></a>
-        <a href="../images/cake3.jpg" data-caption="Newly Featured Cake Design"
-          ><img src="../images/cake3.jpg" alt=""
+        <a href="images/cake3.jpg" data-caption="Newly Featured Cake Design"
+          ><img src="images/cake3.jpg" alt=""
         /></a>
         <a
-          href="../images/smallchops5.jpg"
+          href="images/smallchops5.jpg"
           data-caption="Newly Featured Cake Design"
-          ><img src="../images/smallchops5.jpg" alt=""
+          ><img src="images/smallchops5.jpg" alt=""
         /></a>
       </div>
     </div>
@@ -118,7 +118,7 @@
     <div class="parent">
       <video autoplay muted loop playsinline class="bg-video">
         <source
-          src="../videos/85c8bb70ebc19787410a625727a4d43b.mp4"
+          src="videos/85c8bb70ebc19787410a625727a4d43b.mp4"
           type="video/mp4"
         />
         Your browser does not support HTML5 video.
@@ -153,9 +153,9 @@
 
     <div class="course" id="course">
       <div class="c1">
-        <a href="../HTML/cookies.html">
+        <a href="cookies.html">
           <span class="badge">CERTIFICATE</span>
-          <img src="../images/cookie1.jpg" alt="cookies" />
+          <img src="images/cookie1.jpg" alt="cookies" />
         </a>
         <p>Science Of Pastry Art Of Cookies</p>
         <div class="duration">
@@ -175,7 +175,7 @@
       <div class="c1">
         <a href="bakecakes.html">
           <span class="badge">CERTIFICATE</span>
-          <img src="../images/wedding cake.jpg" alt="cake" />
+          <img src="images/wedding cake.jpg" alt="cake" />
         </a>
         <p>
           Science Of Cake Baking <br />
@@ -198,7 +198,7 @@
       <div class="c1">
         <a href="childbake.html">
           <span class="badge">CERTIFICATE</span>
-          <img src="../images/childbake.jpg" alt="children baking" />
+          <img src="images/childbake.jpg" alt="children baking" />
         </a>
         <p>
           Children's Baking Classes <br />
@@ -221,7 +221,7 @@
       <div class="c1">
         <a href="bakebread.html">
           <span class="badge">CERTIFICATE</span>
-          <img src="../images/bread1.jpg" alt="bread" />
+          <img src="images/bread1.jpg" alt="bread" />
         </a>
         <p>Science Of Bread Making</p>
         <div class="duration">
