--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meet Our Founder | DbakesCakes</title>
     <link rel="stylesheet" href="CSS/about.css" />
-    <link rel="icon" href="../images/generated-image.png" />
-    <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="icon" href="images/generated-image.png" />
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
@@ -26,7 +26,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href=""><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -47,15 +47,6 @@
       </nav>
     </div>
 
-
-
-
-
-
-
-
-
-
     <section class="ceo-section">
       <div class="ceo-header">
         <h2>Our Sweet Visionary</h2>
@@ -68,7 +59,7 @@
         <!-- Clickable CEO Image -->
         <div class="ceo-image-container" onclick="openModal()">
           <img
-            src="../images/FB_IMG_1754164313331.jpg"
+            src="images/FB_IMG_1754164313331.jpg"
             alt="Chef Danielle Baker, Founder of DbakesCakes"
             class="ceo-image"
             id="ceoImg"
