--- a/bakebread.html
+++ b/bakebread.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../images/generated-image.png" />
+    <link rel="icon" href="images/generated-image.png" />
     <title>Bread Mastery Program | DbakesCakes Academy</title>
     <link
       rel="stylesheet"
@@ -32,7 +32,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href="index.html"><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
