--- a/bakecakes.html
+++ b/bakecakes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../images/generated-image.png" />
+    <link rel="icon" href="images/generated-image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cake Baking and Decoration Course | DbakesCakes Academy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -32,7 +32,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href="index.html"><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -62,7 +62,7 @@
             <h1>Cake Baking and Decoration Course<br>(Confectionery Art Mastery)</h1>
             
             <div class="art1">
-                <img src="../images/wedding cake.jpg" alt="Beautiful wedding cake">
+                <img src="images/wedding cake.jpg" alt="Beautiful wedding cake">
                 <div>
                     <p>
                         "This short course empowers participants with essential cake baking
