--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DbakesCakes Gallery</title>
-    <link rel="icon" href="../images/generated-image.png" />
+    <link rel="icon" href="images/generated-image.png" />
     <link rel="stylesheet" href="CSS/gallery.css" />
-    <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href=""><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -73,89 +73,89 @@
 
     <div class="gallery" id="gallery">
         <div class="gallery-item" data-category="birthday" alt="Pink Birthday Cake">
-            <img src="../images/25 Showstopper 1st Birthday Cake Ideas to Wow Guests.jpg" alt="Pink Birthday Cake" />
+            <img src="images/25 Showstopper 1st Birthday Cake Ideas to Wow Guests.jpg" alt="Pink Birthday Cake" />
         </div>
         <div class="gallery-item" data-category="wedding" alt="Ornate Wedding Cake">
-            <img src="../images/Ornate Wedding Cake Dripping with Sophistication.jpg" alt="Elegant White Wedding Cake" />
+            <img src="images/Ornate Wedding Cake Dripping with Sophistication.jpg" alt="Elegant White Wedding Cake" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Valentine Cupcakes">
-            <img src="../images/Passionate Kiss Cupcake Bliss_ Valentine's Affection.jpg" alt="Assorted Cupcakes" />
+            <img src="images/Passionate Kiss Cupcake Bliss_ Valentine's Affection.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Beeded Cake Design">
-            <img src="../images/04d6f943-dcd6-4189-bcc2-338e76f11f08.jpg" alt="Unicorn Cake Design" />
+            <img src="images/04d6f943-dcd6-4189-bcc2-338e76f11f08.jpg" alt="Unicorn Cake Design" />
         </div>
         <div class="gallery-item" data-category="birthday" alt="Superhero Cake">
-            <img src="../images/24 Stunning 50th Birthday Cake Ideas to Celebrate in Style.jpg" alt="Superhero Cake" />
+            <img src="images/24 Stunning 50th Birthday Cake Ideas to Celebrate in Style.jpg" alt="Superhero Cake" />
         </div>
         <div class="gallery-item" data-category="wedding" alt="Rose Cream Wedding Cake">
-            <img src="../images/wedding cake.jpg" alt="Rose Cream Wedding Cake" />
+            <img src="images/wedding cake.jpg" alt="Rose Cream Wedding Cake" />
         </div>
 
         <div class="gallery-item" data-category="birthday" alt="Pink Birthday Cake">
-            <img src="../images/Black Panther Drip Cake.jpg" alt="Pink Birthday Cake" />
+            <img src="images/Black Panther Drip Cake.jpg" alt="Pink Birthday Cake" />
         </div>
         <div class="gallery-item" data-category="wedding" alt="Elegant White Wedding Cake">
-            <img src="../images/3d392885013dab727356fccb856a5962.jpg" alt="Elegant White Wedding Cake" />
+            <img src="images/3d392885013dab727356fccb856a5962.jpg" alt="Elegant White Wedding Cake" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-            <img src="../images/cupcake1.jpg" alt="Assorted Cupcakes" />
+            <img src="images/cupcake1.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-          <img src="../images/cupcake2.jpg" alt="Assorted Cupcakes" />
+          <img src="images/cupcake2.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-          <img src="../images/cupcake3.jpg" alt="Assorted Cupcakes" />
+          <img src="images/cupcake3.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-         <img src="../images/cupcake4.jpg" alt="Assorted Cupcakes" />
+         <img src="images/cupcake4.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-         <img src="../images/cupcake5.jpg" alt="Assorted Cupcakes" />
+         <img src="images/cupcake5.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-         <img src="../images/Salted Caramel Cream Cheese Cupcakes.jpg" alt="Assorted Cupcakes" />
+         <img src="images/Salted Caramel Cream Cheese Cupcakes.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-         <img src="../images/cupcake6.jpg" alt="Assorted Cupcakes" />
+         <img src="images/cupcake6.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-         <img src="../images/cupcake7.jpg" alt="Assorted Cupcakes" />
+         <img src="images/cupcake7.jpg" alt="Assorted Cupcakes" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Strawberry Cake Design">
-          <img src="../images/1e92708d4c30a0c225cd6e2a8d6aac8b.jpg" alt="Unicorn Cake Design" />
+          <img src="images/1e92708d4c30a0c225cd6e2a8d6aac8b.jpg" alt="Unicorn Cake Design" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Purple Dragon Cake Design">
           <img src="../images/6ac8e9ec-185a-40da-9f5c-c11a64573202.jpg" alt="Unicorn Cake Design" />
         </div>
         <div class="gallery-item" data-category="birthday" alt="Superhero Cake">
-            <img src="../images/cake4.jpg" alt="Superhero Cake" />
+            <img src="images/cake4.jpg" alt="Superhero Cake" />
         </div>
         <div class="gallery-item" data-category="birthday" alt="Superhero Cake">
-          <img src="../images/flamingo-ruffle-cake-featured-image--780x475.webp" alt="Superhero Cake" />
+          <img src="images/flamingo-ruffle-cake-featured-image--780x475.webp" alt="Superhero Cake" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Black Dragon Cake Design">
-          <img src="../images/9374d81d9bbdc607c3653dc57adffd21.jpg" alt="Unicorn Cake Design" />
+          <img src="images/9374d81d9bbdc607c3653dc57adffd21.jpg" alt="Unicorn Cake Design" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Secret Cake Design">
-         <img src="../images/7a30788d-8e3d-4e1e-a630-17bb79ad1707.jpg" alt="Unicorn Cake Design" />
+         <img src="images/7a30788d-8e3d-4e1e-a630-17bb79ad1707.jpg" alt="Unicorn Cake Design" />
         </div>
         <div class="gallery-item" data-category="wedding" alt="Rose Cream Wedding Cake">
-         <img src="../images/Cake amazing cake.jpg" alt="Rose Cream Wedding Cake" />
+         <img src="images/Cake amazing cake.jpg" alt="Rose Cream Wedding Cake" />
         </div>
         <div class="gallery-item" data-category="wedding" alt="Rose Cream Wedding Cake">
-          <img src="../images/Stunning Wedding Cake Designs_ Elegant Ideas for Your Perfect Day.jpg" alt="Rose Cream Wedding Cake" />
+          <img src="images/Stunning Wedding Cake Designs_ Elegant Ideas for Your Perfect Day.jpg" alt="Rose Cream Wedding Cake" />
          </div>
          <div class="gallery-item" data-category="wedding" alt="Rose Cream Wedding Cake">
-          <img src="../images/4edb4c96-df65-45a1-a087-9092c4d507b2.jpg" alt="Rose Cream Wedding Cake" />
+          <img src="images/4edb4c96-df65-45a1-a087-9092c4d507b2.jpg" alt="Rose Cream Wedding Cake" />
          </div>
         <div class="gallery-item" data-category="custom" alt="Peecock Cake Design">
-         <img src="../images/36aeeb7a-722a-48d9-831c-3ee5bca0d9e3.jpg" alt="Peecock Cake Design" />
+         <img src="images/36aeeb7a-722a-48d9-831c-3ee5bca0d9e3.jpg" alt="Peecock Cake Design" />
         </div>
         <div class="gallery-item" data-category="custom" alt="Narrow steps Cake Design">
-          <img src="../images/e7f59fa7-1d53-4158-91d5-c64b932424f3.jpg" alt="Peecock Cake Design" />
+          <img src="images/e7f59fa7-1d53-4158-91d5-c64b932424f3.jpg" alt="Peecock Cake Design" />
          </div>
         <div class="gallery-item" data-category="cupcake" alt="Assorted Cupcakes">
-          <img src="../images/Cupcake sprinkles.jpg" alt="Assorted Cupcakes" />
+          <img src="images/Cupcake sprinkles.jpg" alt="Assorted Cupcakes" />
         </div>
         <!-- Add more items as needed -->
     </div>
