--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../images/generated-image.png" />
+    <link rel="icon" href="images/generated-image.png" />
     <title>DbakesCakes.com</title>
     <link rel="stylesheet" href="CSS/index.css" />
-    <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.css" />
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto&display=swap"
       rel="stylesheet"
@@ -42,7 +42,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href=""><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -65,7 +65,7 @@
 
     <div class="hero">
       <div class="hero-video">
-        <video autoplay muted loop src="../videos/WhatsApp Video 2025-08-20 at 16.15.21_1cd29e5f.mp4"></video>
+        <video autoplay muted loop src="videos/WhatsApp Video 2025-08-20 at 16.15.21_1cd29e5f.mp4"></video>
       </div>
 
       <div class="hero1">
@@ -88,7 +88,7 @@
           ><img src="images/cake3.jpg" alt=""
         /></a>
         <a href="images/cake4.jpg" data-caption="Royal Wedding Cake"
-          ><img src="../images/cake4.jpg" alt=""
+          ><img src="images/cake4.jpg" alt=""
         /></a>
         <a
           href="images/smallchops3.jpg"
