--- a/mission.html
+++ b/mission.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Mission | DbakesCakes</title>
-    <link rel="icon" href="../images/generated-image.png" />
+    <link rel="icon" href="images/generated-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="CSS/mission.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
    
 </head>
@@ -26,7 +26,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
