--- a/our-team.html
+++ b/our-team.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Team | DbakesCakes</title>
     <link rel="stylesheet" href="CSS/our-team.css" />
-    <link rel="icon" href="../images/generated-image.png" />
-    <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
+    <link rel="icon" href="images/generated-image.png" />
+    <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
@@ -26,7 +26,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -47,16 +47,6 @@
       </nav>
     </div>
 
-
-
-
-
-
-
-
-
-
-
     <!-- Team Section -->
     <section id="our-team" class="team-section">
       <div class="container">
@@ -70,7 +60,7 @@
           <div class="team-member">
             <div class="member-image-container">
               <img
-                src="../images/FB_IMG_1754164313331.jpg"
+                src="images/FB_IMG_1754164313331.jpg"
                 alt="Chef Danielle"
                 class="member-image"
               />
@@ -93,7 +83,7 @@
           <div class="team-member">
             <div class="member-image-container">
               <img
-                src="../images/file_000000006984620abc12539036f04a0e.png"
+                src="images/file_000000006984620abc12539036f04a0e.png"
                 alt="Chef Gift"
                 class="member-image"
               />
@@ -146,9 +136,6 @@
     </div>
 
 
-
-
-
      <footer class="footer">
       <div class="footer-container">
 
@@ -162,8 +149,6 @@
           </p>
 
           <!-- Formspree Form -->
-
-
           <form
             class="newsletter-form"
             action="https://formspree.io/f/YOUR_FORM_ID"
