--- a/welcome-apply.html
+++ b/welcome-apply.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Your Culinary Journey Begins</title>
-  <link rel="icon" href="../images/generated-image.png" />
+  <link rel="icon" href="images/generated-image.png" />
   <link rel="stylesheet" href="CSS/welcome-apply.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
  
@@ -23,7 +23,7 @@
     <div class="sugar" id="navbar">
       <nav class="cream">
         <a href=""><img
-          src="../images/generated-image.png"
+          src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
@@ -60,7 +60,7 @@
     </p>
   </div>
   <div class="welcome-image">
-    <img src="../images/Apply-image.jpg" alt="Happy students at Culinary Academy" />
+    <img src="images/Apply-image.jpg" alt="Happy students at Culinary Academy" />
   </div>
 </section>
 
