--- a/cookies.html
+++ b/cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science of Pastry Art of Cookies</title>
-    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="CSS/cookies.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -25,7 +25,7 @@
     <div class="sugar" id="navbar">
         <nav class="cream">
             <a href=""><img
-                src="../images/generated-image.png"
+                src="images/generated-image.png"
                 alt="Logo"
                 class="logo"
                 width="50px"
@@ -55,7 +55,7 @@
             <h1>Science of Pastry Art of Cookies</h1>
             
             <div class="art1">
-                <img src="../images/cookie1.jpg" alt="Delicious cookies" />
+                <img src="images/cookie1.jpg" alt="Delicious cookies" />
                 <div>
                     <p>
                         A short course in bakery and pastry art provides a solid
