--- a/mission.html
+++ b/mission.html
@@ -251,7 +251,7 @@
             >DbakesCakes: Where Every Bite and Lesson is a Celebration!</strong
           >
         </p>
-        <p>© 2024 DbakesCakes | Pastry Shop & Baking Academy</p>
+        <p>© 2024 DbakesCakes | Pastry Shop & Baking Academy | Eribs Tech</p>
       </div>
     </footer>
 
