--- a/bakecakes.html
+++ b/bakecakes.html
@@ -243,7 +243,7 @@
                 >DbakesCakes: Where Every Bite and Lesson is a Celebration!</strong
                 >
             </p>
-            <p>© 2024 DbakesCakes | Pastry Shop & Baking Academy</p>
+            <p>© 2024 DbakesCakes | Pastry Shop & Baking Academy | Eribs Tech</p>
         </div>
     </footer>
 
