--- a/bakebread.html
+++ b/bakebread.html
@@ -9,17 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS/bakebread.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="CSS/bakebread.css">
   </head>
   <body>
-    <!-- Overlay for mobile menu -->
-    <div class="overlay" id="overlay"></div>
-
-    <!-- Your Navbar -->
+    <!-- Header and Navbar -->
     <div class="first-head">
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -31,22 +28,21 @@
 
     <div class="sugar" id="navbar">
       <nav class="cream">
-        <a href="index.html"><img
+        <a href=""><img
           src="images/generated-image.png"
           alt="Logo"
           class="logo"
           width="50px"
         /></a>
-
-        <span class="menu-toggle" id="menuToggle">
-          <i class="fa-solid fa-cake-candles" id="menu-icon"></i>
+        <span class="menu-toggle" onclick="toggleMenu()">
+          <i class="fa-solid fa-cake-candles"></i>
         </span>
 
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">Meet The CEO</a></li>
           <li><a href="mission.html">Our Mission</a></li>
-          <li><a href="#course">Courses</a></li>
+          <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html" class="active">Apply Now</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -308,7 +304,7 @@
 
                 <h3 style="margin-top: 20px">🎓 Baking Academy</h3>
                 <p>Master the art of pastry with our expert-led classes!</p>
-                <a href="#course" class="footer-cta-button">Explore Courses</a>
+                <a href="index.html#course" class="footer-cta-button">Explore Courses</a>
             </div>
 
             <!-- Social & Quick Links -->
@@ -342,7 +338,6 @@
     </footer>
 
     <script src="JAVASCRIPT/bakebread.js">
-       
     </script>
   </body>
 </html>
