--- a/childbake.html
+++ b/childbake.html
@@ -42,7 +42,7 @@
           <li><a href="about.html">Meet The CEO</a></li>
           <li><a href="mission.html">Our Mission</a></li>
           <li><a href="index.html#course">Courses</a></li>
-          <li><a href="welcome-apply.html">Apply Now</a></li>
+          <li><a href="welcome-apply.html" class="active">Apply Now</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
