--- a/childbake.html
+++ b/childbake.html
@@ -209,6 +209,16 @@
         </div>
     </footer>
 
+    
+
+    <!-- WhatsApp Chat Bubble -->
+    <a href="https://wa.me/2349064296917" class="whatsapp-chat" target="_blank">
+        <img
+            src="https://cdn-icons-png.flaticon.com/512/124/124034.png"
+            alt="WhatsApp"
+        />
+    </a>
+
     <script src="./JAVASCRIPT/childbake.js"></script>
   </body>
 </html>
