--- a/bakebread.html
+++ b/bakebread.html
@@ -336,6 +336,13 @@
             <p>© 2024 DbakesCakes | Pastry Shop & Baking Academy | Eribs Tech</p>
         </div>
     </footer>
+    <!-- WhatsApp Chat Bubble -->
+    <a href="https://wa.me/2349064296917" class="whatsapp-chat" target="_blank">
+        <img
+            src="https://cdn-icons-png.flaticon.com/512/124/124034.png"
+            alt="WhatsApp"
+        />
+    </a>
 
     <script src="JAVASCRIPT/bakebread.js">
     </script>
