--- a/bakecakes.html
+++ b/bakecakes.html
@@ -244,6 +244,14 @@
         </div>
     </footer>
 
+    <!-- WhatsApp Chat Bubble -->
+    <a href="https://wa.me/2349064296917" class="whatsapp-chat" target="_blank">
+        <img
+            src="https://cdn-icons-png.flaticon.com/512/124/124034.png"
+            alt="WhatsApp"
+        />
+    </a>
+
     <script src="JAVASCRIPT/bakecakes.js">
        
     </script>
