--- a/bakecakes.html
+++ b/bakecakes.html
@@ -245,10 +245,8 @@
         </div>
     </footer>
 
-    <!-- FIXED: Scroll to Top Button -->
-    <button class="scroll-to-top" id="scrollToTop" aria-label="Scroll to top">
-        <i class="fas fa-chevron-up"></i>
-    </button>
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top" id="scrollToTop">↑</button>
 
     <!-- WhatsApp Chat Bubble -->
     <a href="https://wa.me/2349064296917" class="whatsapp-chat" target="_blank">
