--- a/childbake.html
+++ b/childbake.html
@@ -209,6 +209,9 @@
         </div>
     </footer>
 
+    <button id="scrollTopBtn" aria-label="Scroll to Top">
+    ↑</button>
+
     
 
     <!-- WhatsApp Chat Bubble -->
