--- a/bakebread.html
+++ b/bakebread.html
@@ -258,7 +258,7 @@
                 </div>
 
                 <div class="apply-btn-container reveal-zoom">
-                    <a href="Welcome-apply.html" class="cta-button">Enroll in Bread Mastery Program</a>
+                    <a href="./portal.html" class="cta-button">Enroll in Bread Mastery Program</a>
                 </div>
             </section>
         </div>
