--- a/our-team.html
+++ b/our-team.html
@@ -40,7 +40,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="About.html">Meet The CEO</a></li>
           <li><a href="mission.html" class="active">Our Mission</a></li>
-          <li><a href="#course">Courses</a></li>
+          <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
           <li><a href="Cake-GALLERY.HTML">Gallery</a></li>
         </ul>
