--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">Meet The CEO</a></li>
           <li><a href="mission.html">Our Mission</a></li>
-          <li><a href="#course">Courses</a></li>
+          <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
           <li><a href="gallery.html" class="active">Gallery</a></li>
         </ul>
