--- a/welcome-apply.html
+++ b/welcome-apply.html
@@ -37,7 +37,7 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">Meet The CEO</a></li>
           <li><a href="mission.html">Our Mission</a></li>
-          <li><a href="#course">Courses</a></li>
+          <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
