--- a/mission.html
+++ b/mission.html
@@ -38,11 +38,11 @@
 
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">Meet The CEO</a></li>
+          <li><a href="/About.html">Meet The CEO</a></li>
           <li><a href="mission.html" class="active">Our Mission</a></li>
           <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="/gallery.html">Gallery</a></li>
         </ul>
       </nav>
     </div>
