--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">Meet The CEO</a></li>
           <li><a href="mission.html">Our Mission</a></li>
-          <li><a href="index.html">Courses</a></li>
+          <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
           <li><a href="gallery.html">Gallery</a></li>
         </ul>
