--- a/our-team.html
+++ b/our-team.html
@@ -42,7 +42,7 @@
           <li><a href="mission.html" class="active">Our Mission</a></li>
           <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
-          <li><a href="Cake-GALLERY.HTML">Gallery</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
     </div>
