--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
           <h3 style="margin-top: 20px">🍪 Quick Links</h3>
           <p><a href="gallery.html">Gallery</a></p>
           <p><a href="welcome-apply.html">Class Schedule</a></p>
-          <p><a href="#">About Us</a></p>
+          <p><a href="about.html">About Us</a></p>
         </div>
       </div>
 
