--- a/our-team.html
+++ b/our-team.html
@@ -38,7 +38,7 @@
 
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">Meet The CEO</a></li>
+          <li><a href="about.html">Meet The CEO</a></li>
           <li><a href="mission.html" class="active">Our Mission</a></li>
           <li><a href="index.html#course">Courses</a></li>
           <li><a href="welcome-apply.html">Apply Now</a></li>
