--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 </div>
 
                 <h3 style="margin-top: 20px">🍪 Quick Links</h3>
-                <p><a href="#">Shop Now</a></p>
+                <p><a href="gallery.html">Gallery</a></p>
                 <p><a href="welcome-apply.html">Class Schedule</a></p>
                 <p><a href="about.html">About Us</a></p>
             </div>
